# IFoA-FL-WP

./: EAD.py  IFoA client  [ Multilayer ] [freMTPL2freq].py  IFoAserver.py  README.md  graph.py  prepare_dataset.py  pyproject.toml  utils.py
ag_-1/: agent_-1_history.json  agent_-1_model.pkl  agent_-1_opt.pkl  agent_-1_results.csv  fl_model.pt  fl_model_150_no_quantisation_no_smpc_noise.pt  fl_model_150_quantisation_no_smpc noise.pt  fl_model_UP_10ag_100rnd_10ep_1qt_0SMPCn.pt  fl_model_UP_10ag_150rnd_10ep_0qt_1SMPCn.pt  fl_model_UP_10ag_50rnd_10ep_0qt_0SMPCn.pt  fl_model_UP_10ag_50rnd_10ep_1qt_0SMPCn.pt  fl_model_UP_10ag_75rnd_10ep_0qt_1SMPCn.pt
ag_0/: agent_0_history.json  agent_0_model.pkl  agent_0_opt.pkl  agent_0_results.csv  fl_model.pt  fl_model_Final_10ag_350rnd_10ep_0qt_0SMPCn.pt  fl_model_UP_10ag_100rnd_10ep_0qt_1SMPCn.pt  fl_model_UP_10ag_125rnd_10ep_0qt_0SMPCn.pt  fl_model_UP_10ag_150rnd_10ep_1qt_0SMPCn.pt  fl_model_UP_10ag_200rnd_10ep_0qt_0SMPCn.pt  fl_model_UP_10ag_250rnd_10ep_0qt_1SMPCn.pt  fl_model_UP_10ag_250rnd_10ep_1qt_0SMPCn.pt  fl_model_UP_10ag_25rnd_10ep_0qt_1SMPCn.pt  fl_model_UP_10ag_25rnd_10ep_1qt_0SMPCn.pt  fl_model_UP_10ag_300rnd_10ep_0qt_0SMPCn.pt  fl_model_UP_10ag_350rnd_10ep_0qt_0SMPCn.pt  fl_model_UP_10ag_400rnd_10ep_0qt_0SMPCn.pt  fl_model_UP_10ag_50rnd_10ep_0qt_1SMPCn.pt  fl_model_UP_10ag_50rnd_10ep_1qt_1SMPCn.pt  fl_model_UP_10ag_5rnd_10ep_0qt_0SMPCn.pt  fl_model_UP_10ag_5rnd_10ep_0qt_1SMPCn.pt  fl_model_UP_10ag_5rnd_10ep_1qt_0SMPCn.pt  fl_model_UP_10ag_5rnd_10ep_1qt_1SMPCn.pt  fl_model_UP_10ag_75rnd_10ep_1qt_0SMPCn.pt  local_model.pt  (+4 more)
(+209 files in other folders)
