[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "flw_3AgentsDemo"
version = "0.1.0"
description = "IFoA Federated Learning for Claims Frequencies modeling Demo"
authors = ["IFoA FL Working Party"]

[tool.poetry.dependencies]
python = "^3.8"
flwr = "1.1.0"
torch = "^1.12.0"
torchvision = "^0.13.0"
tqdm = "^4.63.0"
pandas = "^1.5.1"
scikit-learn = "^1.1.3"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
skorch = "^0.12.1"
